# ptychiX

./: .gitignore  .loglogin  .readthedocs.yaml  LICENSE.txt  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg
.github/: pull_request_template.md
.github/workflows/: pypi_publish.yml  python-app.yml
docs/source/: conf.py  getting_started.rst  index.rst
docs/source/api/: enums.rst  index.rst  options.rst  task.rst  utils.rst
docs/source/using_pty_chi/: data_structures.rst  devices.rst  engines.rst  index.rst  initialization_recommendations.rst
examples/: save_movies.py
ptychopack/: FIXME.py  __init__.py  algorithm.py  api.py  common.py  core.py  data.py  device.py  dm.py  pie.py  position.py  probe.py  propagate.py  raar.py  rpie.py  support.py  typing.py  utilities.py
src/ptychi/: __init__.py  device.py  forward_models.py  image_proc.py  io_handles.py  maps.py  maths.py  metrics.py  pear.py  pear_io.py  pear_io_aps.py  pear_io_ele.py  pear_plot.py  pear_utils.py  position_correction.py  propagate.py  timer_utils.py  utils.py
src/ptychi/api/: __init__.py  enums.py  task.py  types.py
src/ptychi/data_structures/: __init__.py  base.py  object.py  opr_mode_weights.py  parameter_group.py  probe.py  probe_positions.py
src/ptychi/movies/: __init__.py  api.py  io.py  mappings.py  movie_utils.py  settings.py
src/ptychi/ptychopack/: __init__.py  api.py  dm.py  pie.py  raar.py  support.py
src/ptychi/ptychotorch/: data_structures.py  io_handles.py  propagation.py  utils.py
src/ptychi/reconstructors/: __init__.py  ad_general.py  ad_ptychography.py  base.py  bh.py  dm.py  fifth_rule.py  lsqml.py  pie.py
src/ptychi/timing/: io.py  timer_utils.py
src/ptychointerim/: __init__.py  forward_models.py  image_proc.py  interface.py  maps.py  maths.py  position_correction.py  propagate.py
src/ptychointerim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ptychointerim/api/: __init__.py  ad_ptychography.py  base.py  enums.py  lsqml.py  pie.py  task.py
src/ptychointerim/configs/: __init__.py  ad_ptychography.py  base.py  data.py  lsqml.py  object.py  pie.py  (+4 more)
tests/: .loglogin  conftest.py  dm  generate_gold_data_for_all.sh  test.ipynb  test_2d_ptycho_affine_pos.py  test_2d_ptycho_autodiff.py  test_2d_ptycho_bh.py  test_2d_ptycho_detector_size.py  test_2d_ptycho_dip.py  test_2d_ptycho_dm.py  test_2d_ptycho_epie.py  test_2d_ptycho_epie_mixed_states.py  test_2d_ptycho_epie_opr.py  test_2d_ptycho_epie_position_correction.py  test_2d_ptycho_fifth_rule.py  test_2d_ptycho_interface.py  test_2d_ptycho_lsqml.py  test_2d_ptycho_lsqml_compact.py  test_2d_ptycho_lsqml_momentum.py  test_2d_ptycho_lsqml_multiscan.py  test_2d_ptycho_lsqml_pseudorandom.py  test_2d_ptycho_lsqml_uniform.py  test_2d_ptycho_mpie.py  test_2d_ptycho_near_field.py  test_2d_ptycho_opt_plan.py  test_2d_ptycho_probe_power_constraint.py  test_2d_ptycho_rpie_synthesisdictlearn.py  test_2d_ptycho_smoothness_constraint.py  test_data_on_gpu.py  test_lsqml_single_multislice_consistency.py  test_maths.py  test_multislice_ptycho_autodiff.py  test_multislice_ptycho_autodiff_regularized.py  test_multislice_ptycho_autodiff_slice_spacing_opt.py  test_multislice_ptycho_lsqml.py  test_multislice_ptycho_lsqml_joint_step_size.py  test_multislice_ptycho_lsqml_nonsq_psize.py  test_multislice_ptycho_lsqml_regularized.py  test_patch_extraction_placement.py  (+3 more)
workspace/tungsten/: reconstruct_ad.py  reconstruct_lsqml.py
(+70 files in other folders)
