[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ptychointerim"
authors = [
    {name = ""},
]
description = "ptychointerim"
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "tqdm",
    "scikit-learn",
    "scikit-image",
    "torchvision",
    "torch>=2.3",
    "pandas",
    "h5py",
    "tqdm",
    "mypy",
    "ruff",
    "yapf"
]

version = "0.0.1"

[tool.setuptools]
package-dir = {"" = "src"}  # This tells setuptools that the packages are under "src"

[tool.setuptools.packages.find]
where = ["src"]
