[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ptychointerim"
description = "Package of ptychography reconstruction engines"
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
dependencies = [
    "h5py",
    "matplotlib",
    "mypy",
    "numpy>=2.1",
    "pandas",
    "ruff",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "torch>=2.4.1",
    "torchvision",
    "tqdm",
]
dynamic = ["version"]

[tool.setuptools_scm]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.package-data]
"ptychointerim" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
