[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ptychi"
description = "Pty-chi is a package of ptychography reconstruction engines"
readme = "README.rst"
requires-python = ">=3.11"
license = {file = "LICENSE.txt"}
dependencies = [
    "h5py",
    "matplotlib",
    "mypy",
    "numpy",
    "pandas",
    "ruff",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "torch>=2.4.1",
    "torchvision",
    "tqdm",
]
dynamic = ["version"]

[docs]
dependencies = [
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.setuptools_scm]

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.setuptools.package-data]
"ptychi" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
