[metadata]
name = ptychopack
version = attr: ptychopack.__version__
url = https://github.com/AdvancedPhotonSource/ptychopack
download_url = https://github.com/AdvancedPhotonSource/ptychopack.git
description = Package of ptychography reconstruction engines
long_description = file: README.rst, LICENSE
license = BSD 3-Clause License

[options]
packages = find_namespace:
python_requires = >=3.10
install_requires =
    torch >=2.1

[options.package_data]
ptychopack = py.typed

[options.packages.find]
include = ptychopack
